# heic-convert

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
deploy/: README.md  heic-convert.service
packaging/: build.ps1  heic-convert.spec  make_icon.py
src/heic_convert/: __main__.py  app.py  core.py  launcher.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_core.py  test_launcher.py  test_save_api.py
